--- a/index.html
+++ b/index.html
@@ -1,66 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Viajeros</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/style.css" />
+  <meta charset="utf-8">
+  <title>Vivero</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/landing.css">
+  <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/index.html">Asistencia a viajeros</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#productos" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Productos
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/servicios.html">Servicios</a>
-                        <a class="dropdown-item" href="/articulos.html">Articulos</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+  <header class="header-container">
+    <h1 class="header-title">Turismo Regional</h1>
+    <nav class="nav-container">
+      <ul class="nav-list">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./pages/comercios.html">Comercios</a></li>
+        <li><a href="./pages/sucursales.html">Sucursales</a></li>
+        <li><a href="./pages/pronostico.html">Pronostico</a></li>
+        <li><a href="./pages/crearPlanta.html">Registrar Planta</a></li>
+      </ul>
     </nav>
+  </header>
 
-    <div class="container">
-        <h1>HOME</h1>
-        <h3>Servicios</h3>
-        <p>Esto puede decir algo como introductorio<br>
-            mas tipo caracteristicas. que los servicios pueden ser excursiones, puntos turisticos....
-            <br>Mira los servicios haciendo click <a href="/servicios.html">aqui</a></p>
-        <h3>Articulos</h3>
-        <p>Esto puede ser mas tipo diciendo que los articulos se compran de a uno y que se retira por local. tipo advertencia
-            <br>Mira los articulos haciendo click <a href="/articulos.html">aqui</a></p>
+  <main class="landing-container">
+    <img class="landing-img" src="./img/main.jpg" alt="main">
+    <div class="util-container-landing">
+      <p class="landing-message-container">Turismo regional al alcance de la mano</p>
+      <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Comercios</a></button>
     </div>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
+  </main>
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="./js/index.js"></script>
-</body>
-
-</html>
+  <footer class="footer-container">
+    <span class="footer-social-media">
+      <img src="./img/facebook.svg" alt="facebook" class="social-media-icon"/>
+      <img src="./img/instagram.svg" alt="instagram" class="social-media-icon"/>
+    </span>
+    <h6 class="copyright-footer">© 2022 Copyright: Grupo 7 </h6>
+  </footer>
+  
+  
+  <script src="js/main.js"></script>
+  
+ 
+  </body>
+  
+  </html>
