Creacion de la pagina articulos, con su script y estilos. Modificaciones varias en index.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vivero</title>
+  <title>Asistencia Al Viajero</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -17,6 +17,7 @@
     <nav class="nav-container">
       <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
+        <li><a href="./pages/articulos.html">Articulos</a></li>
         <li><a href="./pages/comercios.html">Comercios</a></li>
         <li><a href="./pages/sucursales.html">Sucursales</a></li>
         <li><a href="./pages/pronostico.html">Pronostico</a></li>
@@ -29,7 +30,7 @@
     <img class="landing-img" src="./img/main.jpg" alt="main">
     <div class="util-container-landing">
       <p class="landing-message-container">Turismo regional al alcance de la mano</p>
-      <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Comercios</a></button>
+      <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Articulos</a></button>
     </div>
   </main>
 
@@ -39,7 +40,7 @@
       <img src="./img/facebook.svg" alt="facebook" class="social-media-icon"/>
       <img src="./img/instagram.svg" alt="instagram" class="social-media-icon"/>
     </span>
-    <h6 class="copyright-footer">© 2022 Copyright: Grupo 7 </h6>
+    <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
   </footer>
   
   
