--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -5,11 +5,12 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/comercios.css">
-  <title>Comercios</title>
+  <link rel="stylesheet" href="../css/articulos.css">
+  <title>Articulos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
+  <script src="./../js/articulos.js" defer></script>
 </header>
 
 <body>
@@ -27,22 +28,27 @@
     </nav>
   </header>
 
-<h2 class="titulosSeccion" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" >Comercios</h2>
+<div class="container-top">
+    <h2 class="titulosSeccion" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Articulos</h2>
+    <p>Estos son los articulos disponibles que podras encontrar en la región</p>
+</div>
 <div class="filt-fiv">
   <label for="filter" class="label-filter" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">Filtrar</label>
   <input type="text" id="filter" class="filter-input"/>
 </div>
 <table data-toggle="table" id="table-catalog">
-
 </table>
 
+<div class="container">
+
+</div>
 
 <footer class="footer-container">
   <span class="footer-social-media">
     <img src="./../img/facebook.svg" alt="facebook" class="social-media-icon"/>
     <img src="./../img/instagram.svg" alt="instagram" class="social-media-icon"/>
   </span>
-  <h6 class="copyright-footer">© 2022 Copyright: Grupo 7 </h6>
+  <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
 </footer>
 
 
