--- a/pages/crearPlanta.html
+++ b/pages/crearPlanta.html
@@ -16,6 +16,7 @@
     <nav class="nav-container">
       <ul class="nav-list">
         <li><a href="../index.html">Home</a></li>
+        <li><a href="./articulos.html">Articulos</a></li>
         <li><a href="./comercios.html">Comercios</a></li>
         <li><a href="./sucursales.html">Sucursales</a></li>
         <li><a href="./pronostico.html">Pronostico</a></li>
