arreglo catalogo anuncios

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Asistencia Al Viajero</title>
+  <title>Vivero</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -13,24 +13,23 @@
 
 <body>
   <header class="header-container">
-    <h1 class="header-title">Turismo Regional</h1>
+    <h1 class="header-title">Vivero Liliana</h1>
     <nav class="nav-container">
       <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./pages/articulos.html">Articulos</a></li>
-        <li><a href="./pages/comercios.html">Comercios</a></li>
+        <li><a href="./pages/anuncios.html">Anuncios</a></li>
         <li><a href="./pages/sucursales.html">Sucursales</a></li>
         <li><a href="./pages/pronostico.html">Pronostico</a></li>
-        <li><a href="./pages/crearPlanta.html">Registrar Planta</a></li>
+        <li><a href="./pages/crearAnuncio.html">Crear Anuncio</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="landing-container">
-    <img class="landing-img" src="./img/main.jpg" alt="main">
+    <img class="landing-img" src="./img/liliana.jpg" alt="lilian">
     <div class="util-container-landing">
-      <p class="landing-message-container">Turismo regional al alcance de la mano</p>
-      <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Articulos</a></button>
+      <p class="landing-message-container">Mejores anuncios siempre</p>
+      <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Anuncios</a></button>
     </div>
   </main>
 
@@ -40,7 +39,7 @@
       <img src="./img/facebook.svg" alt="facebook" class="social-media-icon"/>
       <img src="./img/instagram.svg" alt="instagram" class="social-media-icon"/>
     </span>
-    <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
+    <h6 class="copyright-footer">© 2022 Copyright: Grupo 7 </h6>
   </footer>
   
   
