--- a/pages/pronostico.html
+++ b/pages/pronostico.html
@@ -10,15 +10,14 @@
 </head>
 <body>
 <header class="header-container">
-  <h1 class="header-title">Turismo Regional</h1>
+  <h1 class="header-title">Vivero Liliana</h1>
   <nav class="nav-container">
     <ul class="nav-list">
       <li><a href="../index.html">Home</a></li>
-      <li><a href="./articulos.html">Articulos</a></li>
-      <li><a href="./comercios.html">Comercios</a></li>
+      <li><a href="./anuncios.html">Anuncios</a></li>
       <li><a href="./sucursales.html">Sucursales</a></li>
       <li><a href="./pronostico.html">Pronostico</a></li>
-      <li><a href="./crearPlanta.html">Registrar Planta</a></li>
+      <li><a href="./crearAnuncio.html">Crear Anuncio</a></li>
     </ul>
   </nav>
 </header>
