--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/comercios.css">
-  <title>Comercios</title>
+  <link rel="stylesheet" href="../css/catalogo.css">
+  <title>Anuncios</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
@@ -14,12 +14,11 @@
 
 <body>
   <header class="header-container">
-    <h1 class="header-title">Turismo Regional</h1>
+    <h1 class="header-title">Vivero Liliana</h1>
     <nav class="nav-container">
       <ul class="nav-list">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./articulos.html">Articulos</a></li>
-        <li><a href="./comercios.html">Comercios</a></li>
+        <li><a href="./anuncio.html">Anuncios</a></li>
         <li><a href="./sucursales.html">Sucursales</a></li>
         <li><a href="./pronostico.html">Pronostico</a></li>
         <li><a href="./crearPlanta.html">Registrar Planta</a></li>
@@ -27,7 +26,7 @@
     </nav>
   </header>
 
-<h2 class="titulosSeccion" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" >Comercios</h2>
+<h2 class="titulosSeccion" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" >Anuncios</h2>
 <div class="filt-fiv">
   <label for="filter" class="label-filter" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">Filtrar</label>
   <input type="text" id="filter" class="filter-input"/>
@@ -51,8 +50,8 @@
   <script src="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.js"></script>
 
   
-  <script src="./../js/plants.js"></script>
-  <script src="./../js/comercios.js"></script>
+  <script src="./../js/anuncios.js"></script>
+  <script src="./../js/catalogo.js"></script>
 
 </body>
 </html>
