--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vivero</title>
+  <title>Asistencia al viajero</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -13,7 +13,7 @@
 
 <body>
   <header class="header-container">
-    <h1 class="header-title">Vivero Liliana</h1>
+    <h1 class="header-title">Asistencia al viajero</h1>
     <nav class="nav-container">
       <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
@@ -26,7 +26,7 @@
   </header>
 
   <main class="landing-container">
-    <img class="landing-img" src="./img/liliana.jpg" alt="lilian">
+    <img class="landing-img" src="./img/main.jpg" alt="lilian">
     <div class="util-container-landing">
       <p class="landing-message-container">Mejores anuncios siempre</p>
       <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Anuncios</a></button>
