--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -14,14 +14,14 @@
 
 <body>
   <header class="header-container">
-    <h1 class="header-title">Vivero Liliana</h1>
+    <h1 class="header-title">Asistencia al viajero</h1>
     <nav class="nav-container">
       <ul class="nav-list">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./anuncio.html">Anuncios</a></li>
+        <li><a href="./anuncios.html">Anuncios</a></li>
         <li><a href="./sucursales.html">Sucursales</a></li>
         <li><a href="./pronostico.html">Pronostico</a></li>
-        <li><a href="./crearPlanta.html">Registrar Planta</a></li>
+        <li><a href="./crearAnuncio.html">Registrar Planta</a></li>
       </ul>
     </nav>
   </header>
