--- a/pages/anuncio.html
+++ b/pages/anuncio.html
@@ -5,10 +5,23 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/landing.css">
     <title>Anuncios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
+      <!--  leaftlet links-->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
+
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/leaflet.markercluster.js"></script>
+  <!-- awesome -->
+  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
 </header>
 
 <body>
@@ -28,7 +41,7 @@
   <h2 id="titulo" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" ></h2>
 
     <!-- Main Content Section -->
-    <div class="container-md" style="width: 60%;height: 40%;">
+    <div class="container-md" style="width: 60%;height: 40%;margin-right: 100%">
         <!-- Image Carousel -->
         <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -36,10 +49,10 @@
               <img id="img1" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item">
-              <img id="img1" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 2">
+              <img id="img2" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item">
-              <img id="img1" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 3">
+              <img id="img3" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
@@ -52,10 +65,13 @@
           </button>
         </div>
 
+        <button id="button-landing" onClick="mostrarMapa()" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">Ver comercio en el Mapa</button>
 
   <div class="container-md">
     <p class="text-justify" id="descripcion"></p>
   </div>
+
+  <div id="mapContainer" style="width: 100%;height: 500px;border-radius: 5px;">
 
 <footer class="footer-container">
   <span class="footer-social-media">
@@ -66,6 +82,7 @@
 </footer>
 
 
+<script src="./../js/comercios.js"></script>
   <script src="./../js/verAnuncio.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
