--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -52,6 +52,7 @@
   
   <script src="./../js/anuncios.js"></script>
   <script src="./../js/catalogo.js"></script>
+  <script src="./../js/comercios.js"></script>
 
 </body>
 </html>
