Se agregan los centros al mapa

--- a/pages/anuncio.html
+++ b/pages/anuncio.html
@@ -33,7 +33,7 @@
         <li><a href="./anuncios.html">Anuncios</a></li>
         <li><a href="./sucursales.html">Sucursales</a></li>
         <li><a href="./pronostico.html">Pronostico</a></li>
-        <li><a href="./crearAnuncio.html">Registrar Planta</a></li>
+        <li><a href="./crearAnuncio.html">Crear Anuncio</a></li>
       </ul>
     </nav>
   </header>
@@ -78,7 +78,7 @@
     <img src="./../img/facebook.svg" alt="facebook" class="social-media-icon"/>
     <img src="./../img/instagram.svg" alt="instagram" class="social-media-icon"/>
   </span>
-  <h6 class="copyright-footer">© 2022 Copyright: Grupo 7 </h6>
+  <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
 </footer>
 
 
