--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/footer.css">
@@ -9,51 +10,65 @@
   <!--  leaftlet links-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/leaflet.markercluster.js"></script>
   <!-- awesome -->
-  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
-  
+  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
+
   <title>Sucursales</title>
 
 <body>
-<header class="header-container">
-  <h1 class="header-title">Asistencia al viajero</h1>
-  <nav class="nav-container">
-    <ul class="nav-list">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="./anuncios.html">Anuncios</a></li>
-      <li><a href="./sucursales.html">Sucursales</a></li>
-      <li><a href="./pronostico.html">Pronostico</a></li>
-      <li><a href="./crearAnuncio.html">Crear Anuncio</a></li>
-    </ul>
-  </nav>
-</header>
-<h2 class="titulosSeccion">Sucursales disponibles</h2>
-<button id="mostrarSucursales">Mostrar sucursales</button>
-<div id="flexbox">
-<div id="mapContainer" style="width: 100%;height: 500px;border-radius: 5px;">
-</div>
-<div id="sucursalesContainer">
-<ul id="listaSucursales" >
-</ul>
-</div>
+  <header class="header-container">
+    <h1 class="header-title">Asistencia al viajero</h1>
+    <nav class="nav-container">
+      <ul class="nav-list">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./anuncios.html">Anuncios</a></li>
+        <li><a href="./sucursales.html">Sucursales</a></li>
+        <li><a href="./pronostico.html">Pronostico</a></li>
+        <li><a href="./crearAnuncio.html">Crear Anuncio</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h2 class="titulosSeccion">Mapa Turistico</h2>
+  <div id="buttonsContainer">
+    <button id="mostrarSucursales">Mostrar Comercios</button>
+    <button id="mostrarCentros">Mostrar Centros</button>
+  </div>
+  <div id="flexbox">
+    <div id="mapContainer" style="width: 100%;height: 500px;width: 1050px; border-radius: 5px;">
+    </div>
+    <div id="sucursalesContainer">
+      <ul id="listaSucursales">
+      </ul>
+    </div>
 
-</div>
-<footer class="footer-container">
-  <span class="footer-social-media">
-    <img src="./../img/facebook.svg" alt="facebook" class="social-media-icon"/>
-    <img src="./../img/instagram.svg" alt="instagram" class="social-media-icon"/>
-  </span>
-  <h6 class="copyright-footer">© 2022 Copyright: Grupo 7 </h6>
-</footer>
+    <div id="centrosContainer">
+      <ul id="listaCentros">
+      </ul>
+    </div>
+  </div>
 
-<script src="./../js/sucursales.js"></script>
-<script src="./../js/mapCreation.js"></script>
+
+
+  <footer class="footer-container">
+    <span class="footer-social-media">
+      <img src="./../img/facebook.svg" alt="facebook" class="social-media-icon" />
+      <img src="./../img/instagram.svg" alt="instagram" class="social-media-icon" />
+    </span>
+    <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
+  </footer>
+
+  <script src="./../js/sucursales.js"></script>
+  <script src="./../js/mapCreation.js"></script>
 </body>
+
 </html>
