Se agregan los eventos al mapa junto a los botones. Cambio de nombre de la pagina 'Sucursales' a 'Mapa'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./pages/anuncios.html">Anuncios</a></li>
-        <li><a href="./pages/sucursales.html">Sucursales</a></li>
+        <li><a href="./pages/sucursales.html">Mapa</a></li>
         <li><a href="./pages/pronostico.html">Pronostico</a></li>
         <li><a href="./pages/crearAnuncio.html">Crear Anuncio</a></li>
       </ul>
