--- a/pages/pronostico.html
+++ b/pages/pronostico.html
@@ -15,7 +15,7 @@
     <ul class="nav-list">
       <li><a href="../index.html">Home</a></li>
       <li><a href="./anuncios.html">Anuncios</a></li>
-      <li><a href="./sucursales.html">Sucursales</a></li>
+      <li><a href="./sucursales.html">Mapa</a></li>
       <li><a href="./pronostico.html">Pronostico</a></li>
       <li><a href="./crearAnuncio.html">Crear Anuncio</a></li>
     </ul>
