--- a/pages/crearAnuncio.html
+++ b/pages/crearAnuncio.html
@@ -27,33 +27,47 @@
   <main>
   
     <form class="register-anuncio-form-container" id="register-anuncio-form" onsubmit="return false;" > 
-      <span style="display:flex; justify-content: space-between;">
-        <label for="family">Familia</label>
-        <a href="#" id="add-new-family">Agregar Familia</a>
-      </span>
-      <select name="family" id="family">
+      <label for="commonName">Nombre:</label>
+      <input type="text" id="commonName" name="commonName" required/>
+
+      <label for="commonName">Descripción:</label>
+      <textarea type="text" id="commonDescripcion" name="commonDescripcion" required/></textarea>
+
+      <label for="section">Categoría:</label>
+      <select name="section" id="section" required>
+        <option value="section 1">Indumentaria</option>
+        <option value="section 2">Cosmetica</option>
+        <option value="section 3">Moda y Accesorios</option>
+        <option value="section 4">Hogar y Decoración</option>
+        <option value="section 5">Alimentación y Bebidas</option>
+        <option value="section 6">Deportes y Aire Libre</option>
+        <option value="section 7">Juguetes y Entretenimiento</option>
+        <option value="section 8">Arte y Artesanía/option>
+        <option value="section 9">Electrónica y Tecnología</option>
+        <option value="section 10">Automotriz y Accesorios para Vehículos</option>
       </select>
-  
+
+      <label>
+        Tipo de publicación:<br>
+        <input type="radio" name="tipoPublicacion" value="articulo" checked> Articulo<br>
+        <input type="radio" name="tipoPublicacion" value="servicio"> Servicio<br>
+      </label>
+
+      <!--Articulos inputs-->
+      <div id="subFormArticulo">
+        <label for="commonName">Caracteristicas:</label><br>
+        <textarea type="text" id="commonCaracteristicasArticulo" name="commonCaracteristicasArticulo" style="width:100%;" required/></textarea>
+        <br>
+        <label for="commonName">Stock:</label>
+        <input type="checkbox" id="commonStockArticulo" name="commonStockArticulo" required/>
+      </div>
       
-      <label for="commonName">Nombre comun</label>
-      <input type="text" id="commonName" name="commonName" />
+      <!--Servicios inputs-->
+      <div style="display:none" id="subFormServicio">
+        <label for="commonName">Restricciones:</label><br>
+        <textarea type="text" id="commonDescripcionServicio" name="commonDescripcionServicio" style="width:100%;" required/></textarea>
+      </div>
 
-      <label>Ubicacion:</label>
-
-      <label for="section">Seccion</label>
-      <select name="section" id="section">
-        <option value="section 1">section 1</option>
-        <option value="section 2">section 2</option>
-        <option value="section 3">section 3</option>
-        <option value="section 4">section 4</option>
-      </select>
-
-      <label for="row">Fila</label>
-      <input type="number" id="row" name="row"/>
-
-      <label for="row">Columna</label>
-      <input type="number" id="column" name="column"/>
-    
       <label for="image">Imagen</label>
       <input type="file" id="image" name="image" accept="image/png, image/jpg, image/jpeg"/>
       <div id="display-image"></div>
@@ -113,8 +127,9 @@
     </div>
 </main>
 
-<script src="../js/anuncioNueva.js"></script>
-
+  <script src="./../js/anuncios.js"></script>
+  <script src="../js/anuncioNueva.js"></script>
+  
 
 
   <footer class="footer-container">
@@ -125,9 +140,7 @@
     <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
   </footer>
   
-
   
-  <script src="./../js/anuncios.js"></script>
   <script src="./../js/Util.js"></script>
 </body>
 </html>
