agregue colores y coherencia en los html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img class="landing-img" src="./img/main.jpg" alt="lilian">
     <div class="util-container-landing">
       <p class="landing-message-container">Mejores anuncios siempre</p>
-      <button id="button-landing" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"><a>Ver Anuncios</a></button>
+      <button id="button-landing" class="landing-button" ><a style="vertical-align: super;">Ver Anuncios</a></button>
     </div>
   </main>
 
