--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -38,37 +38,37 @@
       </ul>
     </nav>
   </header>
-  <div id="header-map">
-    <h2 class="titulosSeccion">Mapa Turistico</h2>
-    <p id="descripcion">
-      Aqui se muestran los comercios, centros de asistencia y eventos turisticos de la region
-    </p>
-  </div>
-  <div id="buttonsContainer">
-    <button id="mostrarSucursales">Mostrar Comercios</button>
-    <button id="mostrarCentros">Mostrar Centros</button>
-    <button id="mostrarEventos">Mostrar eventos</button>
-  </div>
-  <div id="flexbox">
-    <div id="mapContainer" style="width: 100%; margin-top: -30px; height: 500px;width: 1500px; border-radius: 5px;">
+  <main style="background-color: #f7ecde;">
+      <div id="header-map">
+      <h2 class="titulosSeccion">Mapa Turistico</h2>
+      <p id="descripcion">
+        Aqui se muestran los comercios, centros de asistencia y eventos turisticos de la region
+      </p>
     </div>
-    <div id="sucursalesContainer">
-      <ul id="listaSucursales">
-      </ul>
+    <div id="buttonsContainer">
+      <button id="mostrarSucursales">Mostrar Comercios</button>
+      <button id="mostrarCentros">Mostrar Centros</button>
+      <button id="mostrarEventos">Mostrar eventos</button>
     </div>
+    <div id="flexbox">
+      <div id="mapContainer" style="width: 100%; margin-top: -30px; height: 500px;width: 1500px; border-radius: 5px;">
+      </div>
+      <div id="sucursalesContainer">
+        <ul id="listaSucursales">
+        </ul>
+      </div>
 
-    <div id="centrosContainer">
-      <ul id="listaCentros">
-      </ul>
+      <div id="centrosContainer">
+        <ul id="listaCentros">
+        </ul>
+      </div>
+
+      <div id="eventosContainer">
+        <ul id="listaEventos">
+        </ul>
+      </div>
     </div>
-
-    <div id="eventosContainer">
-      <ul id="listaEventos">
-      </ul>
-    </div>
-  </div>
-
-
+  </main>
 
   <footer class="footer-container">
     <span class="footer-social-media">
