--- a/pages/anuncio.html
+++ b/pages/anuncio.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/landing.css">
-    <title>Anuncios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
-      <!--  leaftlet links-->
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/landing.css">
+  <title>Anuncios</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
+  <!--  leaftlet links-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/leaflet.markercluster.js"></script>
   <!-- awesome -->
-  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
-</header>
+  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
+  </header>
 
 <body>
   <header class="header-container">
@@ -38,56 +43,64 @@
     </nav>
   </header>
 
-  <h2 id="titulo" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" ></h2>
+  <main>
+    <h2 id="titulo" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"></h2>
 
     <!-- Main Content Section -->
     <div class="container-md" style="width: 60%;height: 40%;margin-right: 100%">
-        <!-- Image Carousel -->
-        <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img id="img1" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 1">
-            </div>
-            <div class="carousel-item">
-              <img id="img2" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 2">
-            </div>
-            <div class="carousel-item">
-              <img id="img3" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 3">
-            </div>
+      <!-- Image Carousel -->
+      <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img id="img1" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 1">
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="carousel-item">
+            <img id="img2" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 2">
+          </div>
+          <div class="carousel-item">
+            <img id="img3" src="https://via.placeholder.com/800x400" class="d-block w-100" alt="Slide 3">
+          </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
-        <button id="button-landing" onClick="mostrarMapa()" class="landing-button" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">Ver comercio en el Mapa</button>
+      <button id="button-landing" onClick="mostrarMapa()" class="landing-button"
+        style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">Ver comercio en el
+        Mapa</button>
 
-  <div class="container-md">
-    <p class="text-justify" id="descripcion"></p>
-  </div>
+      <div class="container-md">
+        <p class="text-justify" id="descripcion"></p>
+      </div>
 
-  <div id="mapContainer" style="width: 100%;height: 500px;border-radius: 5px;">
-
-<footer class="footer-container">
-  <span class="footer-social-media">
-    <img src="./../img/facebook.svg" alt="facebook" class="social-media-icon"/>
-    <img src="./../img/instagram.svg" alt="instagram" class="social-media-icon"/>
-  </span>
-  <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
-</footer>
+      <div id="mapContainer" style="width: 100%;height: 500px;border-radius: 5px;">
+  </main>
 
 
-<script src="./../js/comercios.js"></script>
+  <footer class="footer-container">
+    <span class="footer-social-media">
+      <img src="./../img/facebook.svg" alt="facebook" class="social-media-icon" />
+      <img src="./../img/instagram.svg" alt="instagram" class="social-media-icon" />
+    </span>
+    <h6 class="copyright-footer">© 2023 Copyright: Grupo 1 </h6>
+  </footer>
+
+
+  <script src="./../js/comercios.js"></script>
   <script src="./../js/verAnuncio.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.js"></script>
 
 
 </body>
+
 </html>
