--- a/pages/crearAnuncio.html
+++ b/pages/crearAnuncio.html
@@ -69,10 +69,10 @@
         <label for="commonName">Restricciones:</label><br>
         <textarea type="text" id="commonDescripcionServicio" name="commonDescripcionServicio" style="width:100%;"></textarea>
       </div>
-
-      <label for="image">Imagen</label>
-      <input type="file" id="image" name="image" accept="image/png, image/jpg, image/jpeg" />
-      <div id="display-image"></div>
+      
+      <label for="images">Imágenes</label>
+      <input type="file" id="images" name="images" accept="image/png, image/jpg, image/jpeg" multiple />
+      <div id="display-images"></div>
 
       <button type="submit" class="submit-button-anuncio" id="new-anuncio-submit">Guardar</button>
     </form>
