--- a/pages/anuncio.html
+++ b/pages/anuncio.html
@@ -44,10 +44,11 @@
   </header>
 
   <main>
-    <h2 id="titulo" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"></h2>
+    <h2 id="titulo" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;padding: 20px;">
+    </h2>
 
     <!-- Main Content Section -->
-    <div class="container-md" style="width: 60%;height: 40%;margin-right: 100%">
+    <div class="container-md" style="display: grid;width: 60%;height: 40%;margin-right: 100%; padding: 20px">
       <!-- Image Carousel -->
       <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -75,11 +76,13 @@
         style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">Ver comercio en el
         Mapa</button>
 
-      <div class="container-md">
+      <div class="container-descripcion"
+        style="display: flex ;width: 100%;border-style: inset;border-width: 5px;padding-top: 20px;margin-top: 20px;margin-bottom: 5px;">
         <p class="text-justify" id="descripcion"></p>
       </div>
+    </div>
 
-      <div id="mapContainer" style="width: 100%;height: 500px;border-radius: 5px;">
+    <div id="mapContainer" style="width: 60%;height: 500px;border-radius: 5px;margin-left: 20px;"></div>
   </main>
 
 
