Mejora en la descripcion del articulo/servicio

--- a/pages/anuncio.html
+++ b/pages/anuncio.html
@@ -78,6 +78,7 @@
 
       <div class="container-descripcion"
         style="display: flex ;width: 100%;border-style: inset;border-width: 5px;padding-top: 20px;margin-top: 20px;margin-bottom: 5px;">
+        <h5>Descripción:</h5>
         <p class="text-justify" id="descripcion"></p>
       </div>
     </div>
