Se agrega funcionalidad de cotizaciones

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./pages/anuncios.html">Anuncios</a></li>
         <li><a href="./pages/sucursales.html">Mapa</a></li>
-        <li><a href="./pages/pronostico.html">Pronostico</a></li>
+        <li><a href="./cotizacion.html">Cotizacion</a></li>
         <li><a href="./pages/crearAnuncio.html">Crear Anuncio</a></li>
       </ul>
     </nav>
