--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -22,7 +22,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="./anuncios.html">Anuncios</a></li>
         <li><a href="./sucursales.html">Mapa</a></li>
-        <li><a href="./pronostico.html">Pronostico</a></li>
+        <li><a href="./cotizacion.html">Cotizacion</a></li>
         <li><a href="./crearAnuncio.html">Crear Anuncio</a></li>
       </ul>
     </nav>
